tests/pos/i18867-3.3.scala
//> using options -Werror

import language.`3.3`

def foo(x: Int) = x

def test = foo _
